[bugfix] correctly align multiline column-header button

--- a/app/javascript/flavours/glitch/styles/components/columns.scss
+++ b/app/javascript/flavours/glitch/styles/components/columns.scss
@@ -355,6 +355,7 @@ $ui-header-height: 55px;
   align-items: center;
   flex-grow: 1;
   padding: 12px 0 13px 15px;
+  text-align: start;
 }
 
 .column-header__buttons {
